--- a/BeamWallet/ViewControllers/Main/Wallet/Send/WalletSendViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/WalletSendViewController.xib
@@ -123,7 +123,7 @@
                                                     <color key="textColor" red="0.64313725489999995" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                     <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="NO"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </label>
                                             </subviews>
@@ -314,10 +314,51 @@
                                                 </label>
                                             </subviews>
                                         </stackView>
+                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L22-1N-gPv">
+                                            <rect key="frame" x="0.0" y="355.5" width="335" height="35"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Urd-1P-ImI">
+                                                    <rect key="frame" x="0.0" y="8" width="92" height="19"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="92" id="Fa1-1Z-tr7"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZR1-7n-OnF">
+                                                    <rect key="frame" x="112" y="17.5" width="200" height="0.0"/>
+                                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="NO"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconNextArrow" translatesAutoresizingMaskIntoConstraints="NO" id="rC3-G9-KOF">
+                                                    <rect key="frame" x="327" y="13" width="8" height="13"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="13" id="9Qw-7C-qp1"/>
+                                                        <constraint firstAttribute="width" constant="8" id="sr8-e0-Ou0"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="Urd-1P-ImI" firstAttribute="centerY" secondItem="L22-1N-gPv" secondAttribute="centerY" id="99c-eV-f1z"/>
+                                                <constraint firstItem="ZR1-7n-OnF" firstAttribute="leading" secondItem="Urd-1P-ImI" secondAttribute="trailing" constant="20" id="FcH-0z-e0h"/>
+                                                <constraint firstItem="ZR1-7n-OnF" firstAttribute="centerY" secondItem="L22-1N-gPv" secondAttribute="centerY" id="P14-1e-vEJ"/>
+                                                <constraint firstAttribute="height" constant="35" id="a2S-dy-3IV"/>
+                                                <constraint firstItem="Urd-1P-ImI" firstAttribute="leading" secondItem="L22-1N-gPv" secondAttribute="leading" id="hx3-ri-G2d"/>
+                                                <constraint firstItem="rC3-G9-KOF" firstAttribute="centerY" secondItem="L22-1N-gPv" secondAttribute="centerY" constant="2" id="mzQ-8d-bV8"/>
+                                                <constraint firstAttribute="trailing" secondItem="rC3-G9-KOF" secondAttribute="trailing" id="qI4-z4-Amx"/>
+                                                <constraint firstItem="rC3-G9-KOF" firstAttribute="leading" secondItem="ZR1-7n-OnF" secondAttribute="trailing" constant="15" id="s6D-WE-JMB"/>
+                                            </constraints>
+                                        </view>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5U9-X4-4fp">
                                             <rect key="frame" x="0.0" y="370.5" width="335" height="77.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fpG-mW-geC">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Annotation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fpG-mW-geC">
                                                     <rect key="frame" x="0.0" y="0.0" width="335" height="19"/>
                                                     <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -345,13 +386,13 @@
                                                         <outlet property="delegate" destination="-1" id="8kO-MJ-0mu"/>
                                                     </connections>
                                                 </textField>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comments are local and won't be shared" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1H-ng-YkX">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Annotation are local and won't be shared" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1H-ng-YkX">
                                                     <rect key="frame" x="0.0" y="61" width="335" height="16.5"/>
                                                     <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
                                                     <color key="textColor" red="0.64313725489999995" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                     <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="NO"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </label>
                                             </subviews>
@@ -428,6 +469,7 @@
         </view>
     </objects>
     <resources>
+        <image name="iconNextArrow" width="8" height="13"/>
         <image name="iconScanQr" width="24" height="24"/>
         <image name="iconSendBlue" width="16" height="16"/>
         <image name="iconSymbol" width="16" height="24.5"/>
