--- a/BeamWallet/ViewControllers/CreateWallet/CreateWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/CreateWallet/CreateWalletPasswordViewController.xib
@@ -25,7 +25,7 @@
                 <outlet property="passField" destination="7et-9b-4aA" id="rle-Mr-S5n"/>
                 <outlet property="passProgressView" destination="kAR-Ig-iOb" id="zM1-fw-1hJ"/>
                 <outlet property="stackWidth" destination="K4j-qV-TFN" id="AuH-LA-oYk"/>
-                <outlet property="stackY" destination="DZT-KC-Ppl" id="daT-cy-X7O"/>
+                <outlet property="topOffset" destination="DZT-KC-Ppl" id="9tl-hT-k1V"/>
                 <outlet property="view" destination="4bX-AV-PMw" id="8ae-Jr-HCE"/>
             </connections>
         </placeholder>
