--- a/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
@@ -25,7 +25,7 @@
                 <outlet property="passField" destination="gDD-bM-m0V" id="eSe-1W-C7L"/>
                 <outlet property="passViewHeight" destination="2yF-bN-MWa" id="9oj-7T-K0c"/>
                 <outlet property="stackWidth" destination="r1j-y8-kRz" id="BfW-vV-qtI"/>
-                <outlet property="stackY" destination="2g2-iY-1pl" id="q1E-Fp-gDw"/>
+                <outlet property="topOffset" destination="2g2-iY-1pl" id="bkb-yr-GmB"/>
                 <outlet property="touchIdButton" destination="xxN-ni-oL7" id="xBt-5V-2KF"/>
                 <outlet property="view" destination="sPr-XI-erP" id="dCm-mx-xBc"/>
             </connections>
