--- a/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
@@ -24,7 +24,7 @@
                 <outlet property="mainStack" destination="Syj-NU-whR" id="r3G-Uy-tph"/>
                 <outlet property="passField" destination="CXv-0n-vz1" id="c0S-HO-tYO"/>
                 <outlet property="stackWidth" destination="dax-qW-kAt" id="OV3-H3-Obj"/>
-                <outlet property="stackY" destination="aIx-Lo-jfI" id="ZLa-qa-fMO"/>
+                <outlet property="topOffset" destination="aIx-Lo-jfI" id="O2H-H6-IhF"/>
                 <outlet property="view" destination="RQR-gR-1t9" id="4MX-ro-dwx"/>
             </connections>
         </placeholder>
