--- a/BeamWallet/ViewControllers/PhraseViewController/ConfirmPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/PhraseViewController/ConfirmPhraseViewController.xib
@@ -25,8 +25,8 @@
                 <outlet property="nextButton" destination="EZh-RJ-DHb" id="1j0-Cv-7nK"/>
                 <outlet property="stackHeight" destination="K1p-pc-lYP" id="LPc-04-Uwx"/>
                 <outlet property="stackWidth" destination="rD3-0f-E9e" id="4CV-LF-GQc"/>
-                <outlet property="stackY" destination="3oE-a9-erR" id="3Ql-mW-1bp"/>
                 <outlet property="titleLabel" destination="p1T-xu-CLB" id="3gb-vv-FjX"/>
+                <outlet property="topOffset" destination="3oE-a9-erR" id="8gl-xs-1fO"/>
                 <outlet property="view" destination="1Fc-IQ-u2K" id="H9r-XC-bGr"/>
             </connections>
         </placeholder>
