--- a/BeamWallet/ViewControllers/Main/UTXO/Cells/UTXOSecurityView.xib
+++ b/BeamWallet/ViewControllers/Main/UTXO/Cells/UTXOSecurityView.xib
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yf8-vz-6X6">
-                    <rect key="frame" x="109.5" y="396.5" width="195" height="103.5"/>
+                    <rect key="frame" x="109.5" y="346.5" width="195" height="103.5"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icEyeCrossedBig" translatesAutoresizingMaskIntoConstraints="NO" id="uwt-Zu-98P">
                             <rect key="frame" x="67" y="0.0" width="61" height="60"/>
@@ -47,7 +47,7 @@ Turn it off to see your UTXO list. </string>
             </subviews>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
-                <constraint firstItem="Yf8-vz-6X6" firstAttribute="centerY" secondItem="e43-JB-qgs" secondAttribute="centerY" id="Bce-Ct-qzz"/>
+                <constraint firstItem="Yf8-vz-6X6" firstAttribute="centerY" secondItem="e43-JB-qgs" secondAttribute="centerY" constant="-50" id="Bce-Ct-qzz"/>
                 <constraint firstItem="Yf8-vz-6X6" firstAttribute="centerX" secondItem="e43-JB-qgs" secondAttribute="centerX" id="EeK-9m-BIu"/>
             </constraints>
         </view>
