--- a/BeamWallet/ViewControllers/PhraseViewController/DisplayPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/PhraseViewController/DisplayPhraseViewController.xib
@@ -24,7 +24,7 @@
                 <outlet property="copyButton" destination="EOZ-6T-qlN" id="L1H-yV-sU2"/>
                 <outlet property="mainStack" destination="ieK-AA-2FA" id="ZeP-qs-6g3"/>
                 <outlet property="stackWidth" destination="bWB-tf-HeN" id="fm9-qU-iiQ"/>
-                <outlet property="stackY" destination="iVY-Qp-wuw" id="qaA-k7-OAi"/>
+                <outlet property="topOffset" destination="iVY-Qp-wuw" id="P2d-c7-OkW"/>
                 <outlet property="view" destination="1rJ-7R-t7c" id="VKf-OH-GVu"/>
             </connections>
         </placeholder>
