--- a/BeamWallet/ViewControllers/PhraseViewController/InputPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/PhraseViewController/InputPhraseViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,6 +22,7 @@
             <connections>
                 <outlet property="collectionView" destination="FRO-uv-0vF" id="caS-LR-4JX"/>
                 <outlet property="nextButton" destination="Ovc-qP-PXf" id="Xl5-vu-Bg4"/>
+                <outlet property="topOffset" destination="rQC-3u-6QY" id="9Wz-2B-Ury"/>
                 <outlet property="view" destination="Qs6-5K-P4C" id="8Aq-ep-skV"/>
             </connections>
         </placeholder>
