--- a/BeamWallet/ViewControllers/PhraseViewController/IntroPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/PhraseViewController/IntroPhraseViewController.xib
@@ -22,7 +22,7 @@
             <connections>
                 <outlet property="mainStack" destination="Cyl-sg-GXv" id="VNL-oV-U0Y"/>
                 <outlet property="stackWidth" destination="D6r-yd-Hcz" id="6Pb-lv-KT9"/>
-                <outlet property="stackY" destination="Ahq-0O-Ez0" id="kBv-D8-Ief"/>
+                <outlet property="topOffset" destination="Ahq-0O-Ez0" id="qXK-ZZ-ero"/>
                 <outlet property="view" destination="8iw-Ag-QBa" id="DBo-Er-dSv"/>
             </connections>
         </placeholder>
